tests/od2trips/errors/false_options/missing_output/errors.od2trips
Error: No trip table output file (-o) specified.
Quitting (on error).
